--- a/styles2.css
+++ b/styles2.css
@@ -2,9 +2,10 @@
     display: flex; 
     border: 2px solid black; 
     padding: 10px;
+    flex-wrap: wrap;
     } 
 .item { 
-    flex: 1; 
+    flex: 1;
     padding: 20px; 
     margin: 5px; 
     background-color: lightblue; 
